--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-.sconsign.dblite
-config.log
-.sconf_temp
-*.o
-*.os
-*.so
-*.cfgc
-*.pyc
-*_wrap.cc
-*Lib.py
+# rust build products
+target/
 
 # Built by sconsUtils
 version.py
