--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
-.sconsign.dblite
-config.log
-.sconf_temp
-*.o
-*.os
-*.so
-*.cfgc
-*.pyc
-*_wrap.cc
-*Lib.py
+# rust build products
+target/
 
-# Built by sconsUtils
-version.py
+# the pylib should not be committed
+pylib/
+
 bin/
+tests/__pycache__/
 
 # Pytest
 tests/.tests
