--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rubin_oxide"
+name = "rubinoxide"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "rubin_oxide"
+name = "rubinoxide"
 crate-type = ["cdylib"]
 
 [dependencies]
