--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ serde = { version = "1.0.228", features = ["serde_derive"]}
 serde_yml = "0.0.12"
 serde_json = { version = "1.0.145", features = ["float_roundtrip", "preserve_order"] }
 thiserror = "2.0.17"
+rand = "0.9.2"
+rand_distr = "0.5.1"
+num-traits = "0.2.19"
 
 [tool.maturin]
 python-source="python"
